--- a/content/reference/reader.adoc
+++ b/content/reference/reader.adoc
@@ -36,7 +36,7 @@ Since we have to start somewhere, this reference starts where evaluation starts,
 ** Floating point numbers are read as Doubles; with M suffix they are read as BigDecimals.
 ** Ratios are supported, e.g. `22/7`.
 * Characters - preceded by a backslash: `\c`. `\newline`, `\space`, `\tab`, `\formfeed`, `\backspace`, and `\return` yield the corresponding characters. Unicode characters are represented with `\uNNNN` as in Java. Octals are represented with `\oNNN`.
-* nil Means 'nothing/no-value'- represents Java null and tests logical false
+* `nil` Means 'nothing/no-value'- represents Java null and tests logical false
 * Booleans - `true` and `false`
 * Keywords - Keywords are like symbols, except:
 ** They can and must begin with a colon, e.g. :fred.
